data/derived/comb/progs/unify/prog5564.ml.out
Characters 30-49:
  let fixpoint (f,b) = wwhile ( (f, not (f b = b )) b);;
                                ^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a -> 'a) * bool
       This is not a function; it cannot be applied.
